--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Fiction'
+- GITenberg
 title: The Narrow House
 url: http://www.gutenberg.org/ebooks/42534
